<resources>
    <string name="app_name">TarTalk</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="nickname">Nickname</string>
    <string name="lblNickname">Nickname</string>
    <string name="lblPost">Post</string>
    <string name="comment">Comment</string>
    <string-array name="Profile">
        <item>Change password</item>
        <item>My posts</item>
    </string-array>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="description_zoom_touch_close">touch</string>

    <string name="action_run_success_animation">Run success animation</string>
    <string name="action_run_fail_animation">Run fail animation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vector_test">VectorTestActivity</string>

</resources>
